objects/Order_Item__c.object
<CustomObject>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <referenceTo>Currency__c</referenceTo>
        <relationshipName>Order_Items</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Each_Ticket_Price__c</fullName>
        <formula>IF(Item_Quantity__c!=0, Item_Total__c  /  Item_Quantity__c, Item_Total__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Each Ticket Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Item_Discount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Item Discount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Item_Fee__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Item Fee</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Item_Price__c</fullName>
        <label>Item Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Item_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Item Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Item_Total__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Item Total</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Item_Type__c</fullName>
        <label>Item Type</label>
        <referenceTo>Item_Type__c</referenceTo>
        <relationshipName>Order_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <label>Item</label>
        <referenceTo>BLN_Item__c</referenceTo>
        <relationshipName>Order_Items</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipName>Order_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Promotion__c</fullName>
        <label>Promotion</label>
        <referenceTo>Promotion__c</referenceTo>
        <relationshipName>Order_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>waiting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>waiting</label>
        <type>Checkbox</type>
    </fields>
    <label>BLN Order Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Item__c</columns>
        <columns>Item_Quantity__c</columns>
        <columns>Order__c</columns>
        <columns>Promotion__c</columns>
        <columns>Item_Total__c</columns>
        <columns>Item_Price__c</columns>
        <columns>Item_Discount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OI-{00000000}</displayFormat>
        <label>Order_Item Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BLN Order Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>